<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.weather.app.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/forecastFragment"
        android:name="com.weather.app.ui.forecast.ForecastFragment"
        android:label="@string/forecast"
        tools:layout="@layout/fragment_forecast" />

    <fragment
        android:id="@+id/citiesFragment"
        android:name="com.weather.app.ui.cities.CitiesFragment"
        android:label="@string/cities"
        tools:layout="@layout/fragment_cities" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.weather.app.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
